Update covid comet, vaccine and mask
Randomly spawn covid comet, vaccine and mask. Also, make the covid comet move randomly.

--- a/EECS493/Project2/style/index.css
+++ b/EECS493/Project2/style/index.css
@@ -61,4 +61,20 @@ button {
   z-index: 9;
 }
 
-/* Add your styling here */
+.covidComet {
+  position: absolute; 
+}
+
+.covidComet img{
+  height: 62px;
+  width: 62px;
+}
+
+.vaccine {
+  position: absolute;
+}
+
+.mask {
+  position: absolute;
+}
+
