--- a/EECS493/Project2/style/index.css
+++ b/EECS493/Project2/style/index.css
@@ -19,7 +19,37 @@ button {
   float: left;
   position: relative;
 }
-  
+
+/* Main Menu */
+.menu-header{
+  width:100%;
+  height: 100px;
+  background-color: #800;
+  border-bottom: 6px;
+  border-bottom-style: groove;
+  font-size: 100px;
+  text-align:center;
+}
+
+.menu-content {
+  width:100%;
+  height:620px;
+  text-align: center;
+  background-image: url('../src/frontpage_background.jpg');
+
+  background-size:cover;
+  overflow:hidden
+
+}
+.menu-content-button{
+  display: block;
+  width: 200px;
+  height: 100px;
+  background-color: #A00;
+  margin:auto;
+  margin-top:100px;
+
+}
 /* Game Section --- Right Section */
 
 #actual_game{
@@ -46,6 +76,7 @@ button {
   text-align:center;
   font-size: 60px;
 }
+
 
 #score_num, #covid_danger_num, #covid_level {
   text-align: center;
