--- a/EECS493/Project2/style/index.css
+++ b/EECS493/Project2/style/index.css
@@ -1,9 +1,12 @@
 /* Main Containers */
-body, button {
+body, button, p {
   font-family: VT323;
 }
 button {
   font-size: xx-large;
+}
+p {
+  margin:20px;
 }
 
 .outer-container {
@@ -50,6 +53,67 @@ button {
   margin-top:100px;
 
 }
+
+/* Settings */
+#Settings {
+  width:51%;
+  height:700px;
+  background-color: blue;
+  position: absolute;
+  top:10px;
+  left: 336px;
+  border: 5px solid gainsboro;
+  text-align: center;
+  font-size:40px;
+  color:white;
+}
+
+.volume-bar-box{
+  width:100%;
+  margin-top:90px;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 80%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+.difficulty-box {
+  margin-top: 50px;
+}
+#Settings button{
+  width: 200px;
+  height: 100px;
+  background-color: #A00;
+  border: solid 5px transparent;
+  font-size:40px;
+}
+
+#Settings .difficulty-box button:focus{
+  border: solid 5px yellow;
+}
+
+#close-button {
+  margin-top:80px;
+}
+
+.slider::-webkit-slider-thumb {
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
 /* Game Section --- Right Section */
 
 #actual_game{
@@ -76,7 +140,6 @@ button {
   text-align:center;
   font-size: 60px;
 }
-
 
 #score_num, #covid_danger_num, #covid_level {
   text-align: center;
